@@ -84,6 +84,12 @@ Documentation
   moved to the GitHub wiki section of this repository; the main entry
   page is https://github.com/coq/coq/wiki/The-Coq-FAQ.
 
+Standard Library
+
+- [Bool.bool_dec], [Bool.eqb], [Ascii.ascii_dec], and
+  [String.string_dec] are now aliases for the constants generated by
+  [Scheme Equality] in the corresponding files.
+
 Changes from 8.7.0 to 8.7.1
 ===========================
 
